--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Security\Voter\SocieteVoter\:
+        resource: '../src/Security/Voter/SocieteVoter.php'
+        tags: ['security.voter']
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
